--- a/R4CloThes.Client/Shared/MainLayout.razor
+++ b/R4CloThes.Client/Shared/MainLayout.razor
@@ -46,7 +46,7 @@
                 </div>
                 <!-- Logo -->
                 <div class="logo">
-                    <a href="index.html"><img src="template/img/core-img/logo.png" alt=""></a>
+                    <a href="/"><img src="" alt=""></a>
                 </div>
                 <!-- Amado Nav -->
                 <nav class="amado-nav">
