--- a/R4CloThes.Client/wwwroot/template/css/core-style.css
+++ b/R4CloThes.Client/wwwroot/template/css/core-style.css
@@ -7,25 +7,15 @@
 @import url(../css/jquery-ui.min.css);
 @import url(../css/nice-select.css);
 @import url(../css/font-awesome.min.css);
-@font-face {
-  font-family: 'helveticaneuebold';
-  src: url("../fonts/helvetica_neu_bold-webfont.woff2") format("woff2"), url("../fonts/helvetica_neu_bold-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal; }
-@font-face {
-  font-family: 'helveticaneuemedium';
-  src: url("../fonts/helveticaneue_medium-webfont.woff2") format("woff2"), url("../fonts/helveticaneue_medium-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal; }
-/* :: 2.0 Import All CSS */
-/* :: 3.0 Base CSS */
+
 * {
   margin: 0;
   padding: 0; }
 
 body {
-  font-family: "helveticaneuemedium";
-  font-size: 16px; }
+    font-family: 'Roboto', sans-serif;
+    font-size:16px;
+}
 
 h1,
 h2,
