--- a/R4CloThes.Client/Pages/QuenMatKhau.razor
+++ b/R4CloThes.Client/Pages/QuenMatKhau.razor
@@ -110,7 +110,7 @@
         <div class="set">
             <div class="row">
                 <div class="col-md-4 login-sec">
-                    <h2 class="text-center">Đổi Mật Khẩu</h2>
+                    <h2 class="text-center">Quên Mật Khẩu</h2>
                     <form class="login-form">
                         <div class="form-group">
                             <label for="exampleInputEmail1" class="text-uppercase">Email</label>
