--- a/R4CloThes.Client/Pages/ChiTietSanPham.razor
+++ b/R4CloThes.Client/Pages/ChiTietSanPham.razor
@@ -1,4 +1,4 @@
-﻿@page "/chitietsanpham"
+﻿@page "/chitietsanpham/{id}"
 @inject R4CloThes.Client.Helpers.IAPIHelper _apihelper
 @inject ILocalStorageService localStorage
 @inject ISnackbar _snackbar
@@ -139,7 +139,7 @@
                         <p class="product-price">Giảm giá: @sanPham.Giamgia</p>
                         <p class="product-price">Giá: @SauGiamGia</p>
                         <a>
-                            <h6>@sanPham.Tensanpham</h6>
+                            <h6>Tên sản phẩm: @sanPham.Tensanpham</h6>
                         </a>
                         <!-- Ratings & Review -->
                         <div class="ratings-review mb-15 d-flex align-items-center justify-content-between">
@@ -151,7 +151,7 @@
                         <!-- Avaiable -->
                     </div>
                     <div class="short_overview my-5">
-                        <p>Một vài điểm nổi bật của sản phẩm</p>
+                        <p>Ghi chú: @sanPham.Mota</p>
                     </div>
                     <!-- Add to Cart Form -->
                         <div class="cart-btn d-flex mb-50">
@@ -204,14 +204,17 @@
                                     </MudContainer>
                                 </MudItem>
                                 <MudItem xs="11">
-                                    <div class="mt-3 ml-0 d-flex">
-                                        <div>
-                                            <MudText>Tên khách hàng</MudText>
-                                            <MudText>Thông tin bình luận</MudText>
-                                            <MudLink Href="#">Thích</MudLink>
-                                            <MudLink Class="ml-2" Href="#">Phản hồi</MudLink>
+                                    @foreach (var item in dsdanhgia)
+                                    {
+                                        <div class="mt-3 ml-0 d-flex">
+                                            <div>
+                                                <MudText>Mã:@item.MaDanhGiaSanPham  </MudText>
+                                                <MudText>Nội dung: @item.Noidung</MudText>
+                                                <MudLink Href="#">Thích</MudLink>
+                                                <MudLink Class="ml-2" Href="#">Phản hồi</MudLink>
+                                            </div>
                                         </div>
-                                    </div>
+                                    }
                                 </MudItem>
                             </MudGrid>
                         </MudPaper>
