--- a/R4CloThes.Client/Shared/MainLayout.razor
+++ b/R4CloThes.Client/Shared/MainLayout.razor
@@ -29,7 +29,7 @@
         <div class="mobile-nav">
             <!-- Navbar Brand -->
             <div class="amado-navbar-brand">
-                <a href="/"><img src="template/img/core-img/logo.png" alt=""></a>
+                <a href="/" style="font-size:14px">R4 Clothes</a>
             </div>
             <!-- Navbar Toggler -->
             <div class="amado-navbar-toggler">
@@ -45,7 +45,7 @@
                 </div>
                 <!-- Logo -->
                 <div class="logo">
-                    <a href="/"><img src="" alt=""></a>
+                    <a href="/"><img src="logo_r4.png" alt=""></a>
                 </div>
                 <!-- Amado Nav -->
                 <nav class="amado-nav">
@@ -57,6 +57,7 @@
                         {
                             <MudNavLink Href="/donhang" class="active" Icon="@Icons.Filled.Check" IconColor="Color.Warning">Đơn Hàng</MudNavLink>
                             <MudNavLink Href="/thongtin" class="active" Icon="@Icons.Filled.People" IconColor="Color.Warning">Thông Tin Khách Hàng</MudNavLink>
+                            <MudNavLink Href="/doimk" Icon="@Icons.Filled.LockOpen" IconColor="Color.Warning">Đổi mật khẩu</MudNavLink>
                             <MudNavLink Href="/logout" Icon="@Icons.Filled.Block" IconColor="Color.Warning">Đăng xuất</MudNavLink>
                         }
                         @if (token == null)
@@ -64,21 +65,15 @@
                             <MudNavGroup Title="Đăng nhập" Icon="@Icons.Filled.AccountCircle" Expanded="true">
                                 <MudNavLink Href="/login" Icon="@Icons.Rounded.SupervisedUserCircle" IconColor="Color.Warning">Đăng Nhập</MudNavLink>
                                 <MudNavLink Href="/Dangky" Icon="@Icons.Filled.LockOutline" IconColor="Color.Warning">Đăng Ký</MudNavLink>
-                                <MudNavLink Href="/doimk" Icon="@Icons.Filled.ScreenLockRotation" IconColor="Color.Warning">Đổi Mật Khẩu</MudNavLink>
+                                <MudNavLink Href="/quenmk" Icon="@Icons.Filled.ScreenLockRotation" IconColor="Color.Warning">Quên mật khẩu</MudNavLink>
 
                             </MudNavGroup>
                         }
-                        <MudNavLink Href="/quenmk" Icon="@Icons.Filled.LockOpen" IconColor="Color.Warning">Quên Mật Khẩu</MudNavLink>
                         <MudNavLink Href="/cart" Icon="@Icons.Filled.ShoppingCart" IconColor="Color.Warning">Giỏ hàng<span>(@count)</span></MudNavLink>
                     </ul>
                 </nav>
                 <!-- Social Button -->
-                <div class="social-info d-flex justify-content-between">
-                    <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                </div>
+                
             </header>
         </div>
         <!-- Header Area End -->
@@ -206,7 +201,12 @@
     </footer>
 </div>
 <MudThemeProvider />
-<MudDialogProvider />
+<MudDialogProvider FullWidth="true" 
+                   MaxWidth="MaxWidth.ExtraSmall" 
+                   CloseButton="true" 
+                   DisableBackdropClick="true" 
+                   NoHeader="true" 
+                   Position="DialogPosition.Center" />
 <MudSnackbarProvider />
 @code{
     public int count = 0;
@@ -216,9 +216,8 @@
     {
         List<SanPhamGioHang> cart = await localStorage.GetItemAsync<List<SanPhamGioHang>>("cart");
         count = cart != null ? cart.Count : 0;
-        Console.WriteLine("aaa");
         token = await localStorage.GetItemAsync<string>("token");
-        
+
         StateHasChanged();
     }
 
